--- a/themes/AngarTheme/assets/css/rwd.css
+++ b/themes/AngarTheme/assets/css/rwd.css
@@ -186,7 +186,7 @@
     padding-top: 20px;
   }
 
-  img {
+  .logo-container img {
   scale: 1.15;
   }
 }
